@@ -16,15 +16,23 @@ module RedHillConsulting
       def inherited(child)
         super
         child.content_columns.reject { |column| column.name =~ /(_at|_on)$/ }.each do |column|
-          if column.klass == Fixnum
+          if column.type == :integer
             child.validates_numericality_of column.name, :allow_nil => true, :only_integer => true
           elsif column.number?
             child.validates_numericality_of column.name, :allow_nil => true
-          elsif column.klass == String && column.limit
+          elsif column.text? && column.limit
             child.validates_length_of column.name, :allow_nil => true, :maximum => column.limit
           end
-
-          child.validates_presence_of column.name if !column.null && column.default.nil?
+          
+          if !column.null && column.default.nil?
+            # Work-around for a "feature" of the way validates_presence_of handles boolean fields
+            # See http://dev.rubyonrails.org/ticket/5090 and http://dev.rubyonrails.org/ticket/3334
+            if column.type == :boolean
+              validates_inclusion_of column.name, :in => [true, false]
+            else
+              child.validates_presence_of column.name
+            end
+          end
         end
       end
     end
